<?xml version="1.0" encoding="utf-8"?>
<!--suppress XmlUnusedNamespaceDeclaration, XmlUnusedNamespaceDeclaration -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.slonigiraf.homoksafe.MainActivity">

    <ListView
        android:id="@+id/mainListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >


    </ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/donate"
            android:paddingBottom="5dp"
            android:paddingLeft="64dp"
            android:paddingRight="32dp"
            android:paddingTop="8dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_coffee_black"
            android:text="@string/mainDonateButton" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_room"
            style="@style/AppTheme.ButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mainAddRoomButton"
            android:textStyle="bold"
            android:theme="@style/AppTheme" />

        <Button
            android:id="@+id/add_operation"
            style="@style/AppTheme.ButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mainAddOperationButton"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>